# arc-agi-opoch-toe

./: .gitignore
arc_universe/: pyproject.toml
arc_universe/arc_compile/: __init__.py  compile_theta.py  extract_masks_anchors.py  mask_eval.py
arc_universe/arc_core/: __init__.py  canvas.py  components.py  lattice.py  order_hash.py  palette.py  present.py  shape.py  types.py  wl.py
arc_universe/arc_fixedpoint/: __init__.py  closures.py  eval_unpresent.py  expressions.py  lfp.py
arc_universe/arc_laws/: __init__.py  blow_block.py  connect_fill.py  local_paint.py  object_arith.py  periodic.py  selectors.py
arc_universe/integration_tests/: __init__.py  check_wl_convergence.py  debug_fy_check.py  debug_fy_fill.py  debug_lfp.py  debug_mask_colors.py  debug_mask_extraction.py  debug_masks.py  debug_translate_fy.py  diagnostic_wl.py  inspect_aa18de87.py  inspect_test_aa18de87.py  investigate_band_roles.py  run_gate_a.py  run_gate_b.py  run_gate_c.py  run_gate_d.py  run_gate_e.py  run_gate_f.py  run_gate_g.py  utils.py
arc_universe/scripts/: debug_concat_frame.py  test_blow_block_wo12.py  test_bresenham_only.py  test_canvas_wo07.py  test_components_wo08.py  test_object_arith_wo10.py  test_resize_frame_fix.py  test_simple_wo10.py  test_skeleton_debug.py  test_wo10_final.py
arc_universe/tests/: __init__.py  test_compile_theta.py
arc_universe/tests/integration/: test_WO-06_integration.py
arc_universe/tests/unit/: __init__.py  test_blow_block.py  test_blow_block_mathematical.py  test_canvas.py  test_closures.py  test_components.py  test_connect_fill.py  test_lfp.py  (+14 more)
(+110 files in other folders)
